Pagina eventos y restaurantes terminada

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
         <!-- Menú que aparece con hover -->
         <ul class="nav__lista--none display-none" id="listaLugares">
-          <li><a href="#" class="nav__link">Restaurantes</a></li>
+          <li><a href="./pages/restaurante.html" class="nav__link">Restaurantes</a></li>
           <hr />
-          <li><a href="#" class="nav__link">Eventos</a></li>
+          <li><a href="./pages/eventos.html" class="nav__link">Eventos</a></li>
           <hr />
           <li><a href="./pages/salas.html" class="nav__link">Salas</a></li>
           <hr />
