--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -31,9 +31,9 @@
 
         <!-- Menú que aparece con hover -->
         <ul class="nav__lista--none display-none" id="listaLugares">
-          <li><a href="#" class="nav__link">Restaurantes</a></li>
+          <li><a href="restaurante.html" class="nav__link">Restaurantes</a></li>
           <hr />
-          <li><a href="#" class="nav__link">Eventos</a></li>
+          <li><a href="eventos.html" class="nav__link">Eventos</a></li>
           <hr />
           <li><a href="salas.html" class="nav__link">Salas</a></li>
           <hr />
@@ -72,9 +72,15 @@
           <ul class="list__down list__down--right display-none">
             <h2 class="list__title">Lugares</h2>
             <li><a href="salas.html" class="nav__link link__down">Salas</a></li>
-            <li><a href="#" class="nav__link link__down">Eventos</a></li>
+            <li>
+              <a href="eventos.html" class="nav__link link__down">Eventos</a>
+            </li>
 
-            <li><a href="#" class="nav__link link__down">Restaurantes</a></li>
+            <li>
+              <a href="restaurante.html" class="nav__link link__down"
+                >Restaurantes</a
+              >
+            </li>
           </ul>
         </nav>
       </nav>
