--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -23,7 +23,9 @@
       <nav class="header__nav">
         <ul class="nav__lista">
           <li><a href="../index.html" class="nav__link">Inicio</a></li>
-          <li><a href="../index.html" class="nav__link">Sobre Nosotros</a></li>
+          <li>
+            <a href="sobre_nosotros.html" class="nav__link">Sobre Nosotros</a>
+          </li>
           <li><a href="historias.html" class="nav__link">Empleados</a></li>
           <li>
             <a href="habitaciones.html" class="nav__link">Habitaciones</a>
@@ -33,9 +35,9 @@
 
         <!-- Menú que aparece con hover -->
         <ul class="nav__lista--none display-none" id="listaLugares">
-          <li><a href="#" class="nav__link">Restaurantes</a></li>
+          <li><a href="restaurante.html" class="nav__link">Restaurantes</a></li>
           <hr />
-          <li><a href="#" class="nav__link">Eventos</a></li>
+          <li><a href="eventos.html" class="nav__link">Eventos</a></li>
           <hr />
           <li><a href="salas.html" class="nav__link">Salas</a></li>
           <hr />
@@ -64,6 +66,7 @@
                 >Habitaciones</a
               >
             </li>
+            <li>
               <a href="sobre_nosotros.html" class="nav__link link__down"
                 >Sobre Nosotros</a
               >
@@ -73,9 +76,15 @@
           <ul class="list__down list__down--right display-none">
             <h2 class="list__title">Lugares</h2>
             <li><a href="salas.html" class="nav__link link__down">Salas</a></li>
-            <li><a href="#" class="nav__link link__down">Eventos</a></li>
+            <li>
+              <a href="eventos.html" class="nav__link link__down">Eventos</a>
+            </li>
 
-            <li><a href="#" class="nav__link link__down">Restaurantes</a></li>
+            <li>
+              <a href="restaurante.html" class="nav__link link__down"
+                >Restaurantes</a
+              >
+            </li>
           </ul>
         </nav>
       </nav>
