--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                 >Salas</a
               >
             </li>
-            <li><a href="#" class="nav__link link__down">Eventos</a></li>
+            <li><a href="./pages/eventos.html" class="nav__link link__down">Eventos</a></li>
 
-            <li><a href="#" class="nav__link link__down">Restaurantes</a></li>
+            <li><a href="./pages/restaurante.html" class="nav__link link__down">Restaurantes</a></li>
           </ul>
         </nav>
       </nav>
