Rutas en cards index actualizadas

--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
               diseñadas —Clásica, Ejecutiva o Cabaña— pensadas para ofrecerte
               una estancia inigualable.
             </p>
-            <button class="service__button" aria-label="Más sobre habitaciones">
+            <a href="./pages/habitaciones.html" class="service__button" aria-label="Más sobre habitaciones">
               →
-            </button>
+            </a>
           </div>
 
           <div class="service" data-aos="fade-right">
@@ -273,12 +273,12 @@
               cada ocasión. Diseñados para sorprenderte y adaptarse a tus
               planes.
             </p>
-            <button
+            <a href=""
               class="service__button"
               aria-label="Más sobre planes y ofertas"
             >
               →
-            </button>
+          </a>
           </div>
 
           <div class="service" data-aos="fade-left">
@@ -288,9 +288,9 @@
               Convierte tus eventos en experiencias memorables. Te acompañamos
               en cada detalle para lograr celebraciones inolvidables.
             </p>
-            <button class="service__button" aria-label="Más sobre eventos">
+            <a href="./pages/eventos.html" class="service__button" aria-label="Más sobre eventos">
               →
-            </button>
+            </a>
           </div>
 
           <div class="service" data-aos="fade-left">
@@ -300,12 +300,12 @@
               Degusta lo mejor de la cocina local e internacional en espacios
               únicos que combinan elegancia, tradición y sabor.
             </p>
-            <button
+            <a href="./pages/restaurante.html"
               class="service__button"
               aria-label="Más sobre restaurantes y bares"
             >
               →
-            </button>
+          </a>
           </div>
         </div>
       </section>
