Carga de habitaciones realizada

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -95,6 +95,8 @@
         </nav>
       </nav>
     </header>
+    <div class="black-curtain" id="menuOverlay"></div>
+
     <main class="evento">
       <div class="evento__contenedor-imagen">
         <div class="evento__imagen-principal"></div>
