Cambio de imágenes a .webp 1

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <a href="index.html" class="header__logo-link">
         <img
-          src="./media/imgs/LOGO_HOTEL 4.png"
+          src="./media/imgs/LOGO_HOTEL 4.webp"
           class="header__logo"
           alt="Logo del Ensueño Dorado"
         />
@@ -110,7 +110,7 @@
 
           <div data-aos="fade-up-left" class="information__hotel">
             <img
-            src="./media/imgs/LOGO_HOTEL 4.png"
+            src="./media/imgs/LOGO_HOTEL 4.webp"
             alt="Logo del Hotel"
             class="information__logo"
           />
@@ -151,7 +151,7 @@
           </article>
           <div data-aos="fade-left" class="information__img">
             <img
-            src="./media/imgs/img_habitaciones.png"
+            src="./media/imgs/img_habitaciones.webp"
             alt="Imagen de una Habitacion"
             class="rooms__img"
           />
@@ -212,7 +212,7 @@
           <div class="propuesta" data-aos="fade-up">
             <figure class="propuesta__imagen">
               <img
-                src="./media/photos/romanticismo.png"
+                src="./media/photos/romanticismo.webp"
                 alt="Pareja disfrutando una experiencia romántica"
               />
             </figure>
@@ -224,7 +224,7 @@
           <div class="propuesta" data-aos="fade-up">
             <figure class="propuesta__imagen">
               <img
-                src="./media/photos/regalate.png"
+                src="./media/photos/regalate.webp"
                 alt="Suite con terraza y flores"
               />
             </figure>
@@ -236,7 +236,7 @@
           <div class="propuesta" data-aos="fade-up">
             <figure class="propuesta__imagen">
               <img
-                src="./media/photos/reservaydescuento.png"
+                src="./media/photos/reservaydescuento.webp"
                 alt="Pareja hablando con el personal del hotel"
               />
             </figure>
@@ -395,7 +395,7 @@
       </section>
       <article class="footer__img--content">
         <img
-          src="./media/imgs/LOGO_HOTEL 4.png"
+          src="./media/imgs/LOGO_HOTEL 4.webp"
           class="footer__logo"
           alt="Logo hotel El Ensueño Dorado"
         />
