--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -21,7 +21,7 @@
     <header>
       <a href="../index.html" class="header__logo-link">
         <img
-          src="../media/imgs/LOGO_HOTEL 4.png"
+          src="../media/imgs/LOGO_HOTEL 4.webp"
           class="header__logo"
           alt="Logo del Ensueño Dorado"
         />
@@ -109,7 +109,7 @@
           </svg>
         </div>
         <div class="evento__imagen-secundaria">
-          <img src="../media/events/perfil.jpg" alt="Casa Evento" />
+          <img src="../media/events/perfil.webp" alt="Casa Evento" />
         </div>
       </div>
 
@@ -124,16 +124,16 @@
       <section class="evento__iconos">
         <div class="evento__iconos-wrapper">
           <div class="evento__icono">
-            <img src="../media/events/madre.jpg" alt="Icono 1" />
+            <img src="../media/events/madre.webp" alt="Icono 1" />
           </div>
           <div class="evento__icono">
-            <img src="../media/events/padre.png" alt="Icono 2" />
+            <img src="../media/events/padre.webp" alt="Icono 2" />
           </div>
           <div class="evento__icono">
-            <img src="../media/events/amor.jpg" alt="Icono 3" />
+            <img src="../media/events/amor.webp" alt="Icono 3" />
           </div>
           <div class="evento__icono">
-            <img src="../media/events/navidad.png" alt="Icono 4" />
+            <img src="../media/events/navidad.webp" alt="Icono 4" />
           </div>
         </div>
       </section>
@@ -158,7 +158,7 @@
           </div>
           <div class="evento__imagenes evento__imagenes--madre">
             <img src="../media/events/dia-madre.webp" alt="Foto madre 1" />
-            <img src="../media/events/dia-madre2.jpeg" alt="Foto madre 2" />
+            <img src="../media/events/dia-madre2.webp" alt="Foto madre 2" />
             <img src="../media/events/dia-madre3.webp" alt="Foto madre 3" />
           </div>
         </div>
@@ -166,7 +166,7 @@
       <div class="eventos__especial eventos__especial--padre">
         <div class="eventos__contenido">
           <div class="eventos__imagenes--padre">
-            <img src="../media/events/dia-padre1.jpg" alt="Foto padre 1" />
+            <img src="../media/events/dia-padre1.webp" alt="Foto padre 1" />
             <img src="../media/events/dia-padre2.webp" alt="Foto padre 2" />
           </div>
           <div class="eventos__texto" style="text-align: right">
@@ -197,7 +197,7 @@
             style="background-image: url('../media/events/amor2.avif')"
           ></div>
           <div class="amor__icono">
-            <img src="../media/events/amor-icono.png" alt="Icono amor" />
+            <img src="../media/events/amor-icono.webp" alt="Icono amor" />
           </div>
           <div class="amor__contenido">
             <h3 class="amor__subtitulo">Amor en el aire</h3>
@@ -212,7 +212,7 @@
             style="background-image: url('../media/events/amistad.webp')"
           ></div>
           <div class="amor__icono">
-            <img src="../media/events/amistad-icono.png" alt="Icono amistad" />
+            <img src="../media/events/amistad-icono.webp" alt="Icono amistad" />
           </div>
           <div class="amor__contenido">
             <h3 class="amor__subtitulo">Amistad en acción</h3>
@@ -328,7 +328,7 @@
       </section>
       <article class="footer__img--content">
         <img
-          src="../media/imgs/LOGO_HOTEL 4.png"
+          src="../media/imgs/LOGO_HOTEL 4.webp"
           class="footer__logo"
           alt="Logo hotel El Ensueño Dorado"
         />
