--- a/pages/historia_empleados.html
+++ b/pages/historia_empleados.html
@@ -49,7 +49,7 @@
 
               </div>
                 <div class="foto_empleado">
-                    <img src="../media/imgs/Empleados/Juan David.jpeg" alt="">
+                    <img src="../media/imgs/Empleados/Juan David.webp" alt="">
                   </div>
                 <div class="historia_empleado">
                     <h4>Juan David López <br>
@@ -64,7 +64,7 @@
 
             </div>
               <div class="foto_empleado">
-                  <img src="../media/imgs/Empleados/Laura.jpeg" alt="">
+                  <img src="../media/imgs/Empleados/Laura.webp" alt="">
                 </div>
               <div class="historia_empleado">
                   <h4>Laura Martínez<br>
@@ -81,7 +81,7 @@
 
             </div>
             <div class="foto_empleado">
-                <img src="../media/imgs/Empleados/Alejandro.jpeg" alt="">
+                <img src="../media/imgs/Empleados/Alejandro.webp" alt="">
               </div>
             <div class="historia_empleado">
                 <h4>Alejandro Gutiérrez<br>
@@ -98,7 +98,7 @@
 
           </div>
           <div class="foto_empleado">
-              <img src="../media/imgs/Empleados/Andrés.jpeg" alt="">
+              <img src="../media/imgs/Empleados/Andrés.webp" alt="">
             </div>
           <div class="historia_empleado">
               <h4>Andrés Ramírez<br>
