--- a/pages/historias.html
+++ b/pages/historias.html
@@ -95,7 +95,7 @@
         <section class="cuadros_empleados">
           <div class="linea_horizontal"></div>
           <div class="foto_empleado">
-            <img src="../media/imgs/Empleados/Juan David.jpeg" alt="" />
+            <img src="../media/imgs/Empleados/Juan David.webp" alt="" />
           </div>
           <div class="historia_empleado">
             <h4>
@@ -116,7 +116,7 @@
         <section class="cuadros_empleados">
           <div class="linea_horizontal"></div>
           <div class="foto_empleado">
-            <img src="../media/imgs/Empleados/Laura.jpeg" alt="" />
+            <img src="../media/imgs/Empleados/Laura.webp" alt="" />
           </div>
           <div class="historia_empleado">
             <h4>
@@ -136,7 +136,7 @@
         <section class="cuadros_empleados">
           <div class="linea_horizontal"></div>
           <div class="foto_empleado">
-            <img src="../media/imgs/Empleados/Alejandro.jpeg" alt="" />
+            <img src="../media/imgs/Empleados/Alejandro.webp" alt="" />
           </div>
           <div class="historia_empleado">
             <h4>
@@ -157,7 +157,7 @@
         <section class="cuadros_empleados">
           <div class="linea_horizontal"></div>
           <div class="foto_empleado">
-            <img src="../media/imgs/Empleados/Andrés.jpeg" alt="" />
+            <img src="../media/imgs/Empleados/Andrés.webp" alt="" />
           </div>
           <div class="historia_empleado">
             <h4>
