--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -12,7 +12,7 @@
     <header>
       <a href="../index.html" class="header__logo-link">
         <img
-          src="../media/imgs/LOGO_HOTEL 4.png"
+          src="../media/imgs/LOGO_HOTEL 4.webp"
           class="header__logo"
           alt="Logo del Ensueño Dorado"
         />
@@ -184,7 +184,7 @@
       </section>
       <article class="footer__img--content">
         <img
-          src="../media/imgs/LOGO_HOTEL 4.png"
+          src="../media/imgs/LOGO_HOTEL 4.webp"
           class="footer__logo"
           alt="Logo hotel El Ensueño Dorado"
         />
