Cambio de imágenes a webp y corrección de logo

--- a/pages/Formularios.html
+++ b/pages/Formularios.html
@@ -90,7 +90,7 @@
             <h3>Tu selección</h3>
             <p><strong>Habitación N°</strong> 305</p>
             <p><strong>Total a pagar</strong> €1.250,00</p>
-            <img src="../media/imgs/LOGO_HOTEL 4.webp" alt="Logo del hotel">
+            <img src="../media/imgs/LOGO_HOTEL 4.png" alt="Logo del hotel">
         </div>
     </div>
 </body>
