--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -21,7 +21,7 @@
     <header>
       <a href="../index.html" class="header__logo-link">
         <img
-          src="../media/imgs/LOGO_HOTEL 4.webp"
+          src="../media/imgs/LOGO_HOTEL 4.png"
           class="header__logo"
           alt="Logo del Ensueño Dorado"
         />
@@ -328,7 +328,7 @@
       </section>
       <article class="footer__img--content">
         <img
-          src="../media/imgs/LOGO_HOTEL 4.webp"
+          src="../media/imgs/LOGO_HOTEL 4.png"
           class="footer__logo"
           alt="Logo hotel El Ensueño Dorado"
         />
