--- a/pages/restaurante.html
+++ b/pages/restaurante.html
@@ -98,7 +98,7 @@
         <div class="slider-section__slides">
           <div class="slider-section__slide slider-section__slide--active">
             <img
-              src="../media/restaurant/fondo.jpg"
+              src="../media/restaurant/fondo.webp"
               alt="Slide 1"
               class="slider-section__image"
             />
@@ -108,7 +108,7 @@
           </div>
           <div class="slider-section__slide">
             <img
-              src="../media/restaurant/fondo2.jpg"
+              src="../media/restaurant/fondo2.webp"
               alt="Slide 2"
               class="slider-section__image"
             />
@@ -118,7 +118,7 @@
           </div>
           <div class="slider-section__slide">
             <img
-              src="../media/restaurant/fondo3.jpg"
+              src="../media/restaurant/fondo3.webp"
               alt="Slide 3"
               class="slider-section__image"
             />
@@ -156,7 +156,7 @@
           <div class="gallery__group">
             <div class="gallery__card">
               <img
-                src="../media/restaurant/vaso1.png"
+                src="../media/restaurant/vaso1.webp"
                 alt="Bebida 1"
                 class="gallery__card-img"
               />
@@ -165,7 +165,7 @@
 
             <div class="gallery__card gallery__card--center">
               <img
-                src="../media/restaurant/vaso2.png"
+                src="../media/restaurant/vaso2.webp"
                 alt="Bebida 2"
                 class="gallery__card-img"
               />
@@ -186,7 +186,7 @@
 
             <div class="gallery__card">
               <img
-                src="../media/restaurant/vaso3.png"
+                src="../media/restaurant/vaso3.webp"
                 alt="Bebida 3"
                 class="gallery__card-img"
               />
@@ -198,7 +198,7 @@
           <div class="gallery__group">
             <div class="gallery__card">
               <img
-                src="../media/restaurant/carne1.png"
+                src="../media/restaurant/carne1.webp"
                 alt="Bebida 1"
                 class="gallery__card-img"
               />
@@ -207,7 +207,7 @@
 
             <div class="gallery__card gallery__card--center">
               <img
-                src="../media/restaurant/carne2.png"
+                src="../media/restaurant/carne2.webp"
                 alt="Bebida 2"
                 class="gallery__card-img"
               />
@@ -227,7 +227,7 @@
             </div>
             <div class="gallery__card">
               <img
-                src="../media/restaurant/carne3.png"
+                src="../media/restaurant/carne3.webp"
                 alt="Bebida 3"
                 class="gallery__card-img"
               />
@@ -239,7 +239,7 @@
           <div class="gallery__group">
             <div class="gallery__card">
               <img
-                src="../media/restaurant/vino1.png"
+                src="../media/restaurant/vino1.webp"
                 alt="Bebida 1"
                 class="gallery__card-img"
               />
@@ -247,7 +247,7 @@
             </div>
             <div class="gallery__card gallery__card--center">
               <img
-                src="../media/restaurant/vino2.png"
+                src="../media/restaurant/vino2.webp"
                 alt="Bebida 2"
                 class="gallery__card-img"
               />
@@ -267,7 +267,7 @@
             </div>
             <div class="gallery__card">
               <img
-                src="../media/restaurant/vino3.png"
+                src="../media/restaurant/vino3.webp"
                 alt="Bebida 3"
                 class="gallery__card-img"
               />
