--- a/pages/salas.html
+++ b/pages/salas.html
@@ -90,7 +90,7 @@
     <main class="main-sala">
       <section class="sala-section">
         <img
-          src="../media/imgs/lobby.jpg"
+          src="../media/imgs/lobby.webp"
           alt="Lobby del hotel"
           class="sala-image"
         />
@@ -106,7 +106,7 @@
 
       <section class="sala-section">
         <img
-          src="../media/imgs/restaurante.png"
+          src="../media/imgs/restaurante.webp"
           alt="Restaurante del hotel"
           class="sala-image"
         />
@@ -122,7 +122,7 @@
 
       <section class="sala-section">
         <img
-          src="../media/imgs/sala_juegos.jpg"
+          src="../media/imgs/sala_juegos.webp"
           alt="Sala de juegos"
           class="sala-image"
         />
@@ -137,7 +137,7 @@
 
       <section class="sala-section">
         <img
-          src="../media/imgs/bar.jpg"
+          src="../media/imgs/bar.webp"
           alt="Bar del hotel"
           class="sala-image"
         />
@@ -168,7 +168,7 @@
 
       <section class="sala-section">
         <img
-          src="../media/imgs/sala_masajes.jpg"
+          src="../media/imgs/sala_masajes.webp"
           alt="Sala de Masajes"
           class="sala-image"
         />
@@ -183,7 +183,7 @@
       </section>
       <section class="sala-section">
         <img
-          src="../media/imgs/gimnasio.jpg"
+          src="../media/imgs/gimnasio.webp"
           alt="Gimnasio del Hotel"
           class="sala-image"
         />
