--- a/pages/sobre_hotel.html
+++ b/pages/sobre_hotel.html
@@ -49,7 +49,7 @@ Tras seis años de esfuerzo, aprendizaje y compromiso, alcanzamos los objetivos 
                     </p>
                 </div>
                   <div class="imagen_sb_ht">
-                  <img src="../media/imgs/Imagen 1.jpg" alt="" class="imagen_sb_int">
+                  <img src="../media/imgs/Imagen 1.webp" alt="" class="imagen_sb_int">
                 </div>
             </section>
             <section class="caja_sb_ht sombra_sb_ht imagen_centrada">
@@ -59,7 +59,7 @@ Tras seis años de esfuerzo, aprendizaje y compromiso, alcanzamos los objetivos 
                   En El Ensueño Dorado, nuestra misión es brindar a nuestros huéspedes un espacio donde puedan sentirse tan acogidos y cómodos como en la casa de sus amigos, combinando la calidez y familiaridad con la elegancia y sofisticación de un palacio de realeza. Nos esforzamos por crear un entorno en el que la modernidad y el diseño impactante se integren armoniosamente con espacios funcionales y cómodos, pensados para satisfacer tanto las necesidades laborales como los momentos de descanso y esparcimiento. Nos comprometemos a ofrecer un servicio excepcional, garantizando a cada visitante una experiencia única, memorable y profundamente gratificante.</p>
               </div>
               <div class="imagen_sb_ht">
-                <img src="../media/imgs/Imagen 2.jpg" alt="" class="imagen_sb_int">
+                <img src="../media/imgs/Imagen 2.webp" alt="" class="imagen_sb_int">
               </div>
           </section>
           <section class="caja_sb_ht sombra_sb_ht imagen_centrada">
@@ -70,7 +70,7 @@ Tras seis años de esfuerzo, aprendizaje y compromiso, alcanzamos los objetivos 
                 Juntos podemos construir un verdadero hogar en armonía con la naturaleza y con la comunidad que nos rodea.</p>
             </div>
             <div class="imagen_sb_ht">
-              <img src="../media/imgs/Imagen 3.jpeg" alt="" class="imagen_sb_int">
+              <img src="../media/imgs/Imagen 3.webp" alt="" class="imagen_sb_int">
             </div>
         </section>
 
