--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -113,7 +113,7 @@
           </div>
           <div class="imagen_sb_ht">
             <img
-              src="../media/imgs/Imagen 1.jpg"
+              src="../media/imgs/Imagen 1.webp"
               alt=""
               class="imagen_sb_int"
             />
@@ -138,7 +138,7 @@
           </div>
           <div class="imagen_sb_ht">
             <img
-              src="../media/imgs/Imagen 2.jpg"
+              src="../media/imgs/Imagen 2.webp"
               alt=""
               class="imagen_sb_int"
             />
