Cambio de rutas a webp

--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -165,7 +165,7 @@
           </div>
           <div class="imagen_sb_ht">
             <img
-              src="../media/imgs/Imagen 3.jpeg"
+              src="../media/imgs/Imagen 3.webp"
               alt=""
               class="imagen_sb_int"
             />
