--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -12,7 +12,7 @@
     <header>
       <a href="../index.html" class="header__logo-link">
         <img
-          src="../media/imgs/LOGO_HOTEL 4.webp"
+          src="../media/imgs/LOGO_HOTEL 4.png"
           class="header__logo"
           alt="Logo del Ensueño Dorado"
         />
@@ -134,12 +134,14 @@
 
           <h4>Filtrar Por:</h4>
         </aside>
+        <article class="modal__comodidades" id="modal-comodidades">
+          <span id="cerrar-modal" class="modal__cerrar">&times;</span>
+
+          <h2>Comodidades</h2>
+          <ul id="lista-comodidades" class="modal__lista"></ul>
+        </article>
         <section class="rooms__container" id="contenedorHabitaciones">
           <!-- Habitaciones Javascript -->
-          <dialog id="modalComodidades">
-            <p id="contenidoModal">Hello world</p>
-            <button onclick="cerrarModal()">Cerrar</button>
-          </dialog>
         </section>
       </section>
     </main>
@@ -184,7 +186,7 @@
       </section>
       <article class="footer__img--content">
         <img
-          src="../media/imgs/LOGO_HOTEL 4.webp"
+          src="../media/imgs/LOGO_HOTEL 4.png"
           class="footer__logo"
           alt="Logo hotel El Ensueño Dorado"
         />
