Corrección de rutas Eventos

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -197,7 +197,7 @@
             style="background-image: url('../media/events/amor2.avif')"
           ></div>
           <div class="amor__icono">
-            <img src="../media/events/amor-icono.webp" alt="Icono amor" />
+            <img src="../media/events/amor-icono.png" alt="Icono amor" />
           </div>
           <div class="amor__contenido">
             <h3 class="amor__subtitulo">Amor en el aire</h3>
@@ -212,7 +212,7 @@
             style="background-image: url('../media/events/amistad.webp')"
           ></div>
           <div class="amor__icono">
-            <img src="../media/events/amistad-icono.webp" alt="Icono amistad" />
+            <img src="../media/events/amistad-icono.png" alt="Icono amistad" />
           </div>
           <div class="amor__contenido">
             <h3 class="amor__subtitulo">Amistad en acción</h3>
@@ -224,7 +224,7 @@
         <div class="amor__tarjeta">
           <div
             class="amor__imagen"
-            style="background-image: url('../media/events/familia.jpg')"
+            style="background-image: url('../media/events/familia.webp')"
           ></div>
           <div class="amor__icono">
             <img src="../media/events/familia-icono.webp" alt="Icono familia" />
@@ -257,7 +257,7 @@
           <div class="celebraciones__panel celebraciones__panel--navidad">
             <div
               class="celebraciones__imagen"
-              style="background-image: url('../media/events/navidad2.jpg')"
+              style="background-image: url('../media/events/navidad2.webp')"
             >
               <div class="celebraciones__overlay">
                 <h2>Celebración de Navidad</h2>
@@ -272,7 +272,7 @@
           <div class="celebraciones__panel celebraciones__panel--anonuevo">
             <div
               class="celebraciones__imagen"
-              style="background-image: url('../media/events/año-nuevo.jpg')"
+              style="background-image: url('../media/events/año-nuevo.webp')"
             >
               <div class="celebraciones__overlay">
                 <h2>Fiesta de Año Nuevo</h2>
