--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -91,9 +91,10 @@
       <section class="rooms__introduction">
         <h2 class="rooms__title-p">Habitaciones</h2>
         <p class="rooms__description-p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, ex
-          rem aliquid autem hic et expedita a nisi deserunt labore fugit ad
-          deleniti, fuga optio corporis facere praesentium neque minima!
+          En nuestro hotel encontrarás habitaciones diseñadas para tu máximo
+          confort. Espacios acogedores, con vista al mar y todos los servicios
+          necesarios para vivir una experiencia inolvidable, pensada para tu
+          descanso, comodidad y bienestar total.
         </p>
       </section>
       <section class="filter__container">
